[package]
name = "echosrv"
version = "0.1.0"
edition = "2021"
description = "A high-performance async echo server library built with Tokio for testing and development"
license = "MIT"
repository = "https://github.com/divoxx/echosrv"
homepage = "https://github.com/divoxx/echosrv"
documentation = "https://docs.rs/echosrv"
readme = "README.md"
keywords = ["echo", "server", "tcp", "udp", "async"]
categories = ["network-programming", "asynchronous", "command-line-utilities"]
authors = ["Rodrigo Rafael Monti Kochenburger <rk@divoxx.me>"]

[dependencies]
tokio = { version = "1.32.0", features = ["full", "signal", "net"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
thiserror = "1.0"
color-eyre = "0.6.2"

[[bin]]
name = "echosrv"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 