[package]
name = "echosrv"
version = "0.3.0"
edition = "2024"
description = "A high-performance set of async echo server library built with Tokio for testing and development environments"
license = "MIT"
repository = "https://github.com/divoxx/echosrv"
homepage = "https://github.com/divoxx/echosrv"
documentation = "https://docs.rs/echosrv"
readme = "README.md"
keywords = ["echo", "server", "async"]
categories = ["network-programming", "asynchronous", "command-line-utilities"]
authors = ["Rodrigo Rafael Monti Kochenburger <rk@divoxx.me>"]

[dependencies]
tokio = { version = "1.32.0", features = ["full", "signal", "net"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
thiserror = "2"
color-eyre = "0.6.2"
async-trait = "0.1.88"
http = "1.0"
httparse = "1.8"
bytes = "1.4"
tokio-util = { version = "0.7", features = ["codec"] }
libc = "0.2"

[[bin]]
name = "echosrv"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

